<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/photo"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:src="@drawable/photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="450px"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="65dp"
        app:layout_constraintTop_toBottomOf="@+id/photo">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:fontFamily="@font/poppins_medium"
        android:minHeight="20dp"
        android:background="@drawable/rounded_edit_text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiPalindrome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tiName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edPalindrome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="45dp"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/palindrome"
            android:background="@drawable/rounded_edit_text"/>
    </com.google.android.material.textfield.TextInputLayout>

   <Button
       android:id="@+id/checkBtn"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@+id/tiPalindrome"
       android:layout_marginHorizontal="30dp"
       android:text="@string/check"
       android:layout_marginTop="50dp"
       android:fontFamily="@font/poppins_medium"
       android:background="@drawable/button_style"/>

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/checkBtn"
        android:layout_marginHorizontal="30dp"
        android:text="@string/next"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_style"/>


</androidx.constraintlayout.widget.ConstraintLayout>